force-app/main/default/objects/Author__c/fields/Author_ID__c.field-meta.xml
<CustomField>
    <fullName>Author_ID__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Author ID</label>
    <type>AutoNumber</type>
</CustomField>