force-app/main/default/objects/Author__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>PAK</fullName>
            </value>
            <value>
                <fullName>RUS</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>